--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,3 +1,4 @@
+#This deploys the RSP orchestrator with 3 initial replicas, resource requests/limits to prevent OOM, and readiness/liveness probes for health.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
